cmake_minimum_required(VERSION 3.5)
project(fs_private)

project(fslib VERSION 0.1)


set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(SOURCE_FILES
        src/actions/action_id.cxx
        src/actions/action_id.hxx
        src/actions/actions.cxx
        src/actions/actions.hxx
        src/actions/checker.cxx
        src/actions/checker.hxx
        src/actions/grounding.cxx
        src/actions/grounding.hxx
        src/actions/lifted_action_iterator.cxx
        src/actions/lifted_action_iterator.hxx
        src/applicability/action_managers.cxx
        src/applicability/action_managers.hxx
        src/applicability/base.hxx
        src/applicability/formula_interpreter.cxx
        src/applicability/formula_interpreter.hxx
        src/applicability/gecode_analyzer.cxx
        src/applicability/gecode_analyzer.hxx
        src/applicability/match_tree.cxx
        src/applicability/match_tree.hxx
        src/constraints/gecode/handlers/base_action_csp.cxx
        src/constraints/gecode/handlers/base_action_csp.hxx
        src/constraints/gecode/handlers/base_csp.cxx
        src/constraints/gecode/handlers/base_csp.hxx
        src/constraints/gecode/handlers/formula_csp.cxx
        src/constraints/gecode/handlers/formula_csp.hxx
        src/constraints/gecode/handlers/ground_action_csp.cxx
        src/constraints/gecode/handlers/ground_action_csp.hxx
        src/constraints/gecode/handlers/ground_effect_csp.cxx
        src/constraints/gecode/handlers/ground_effect_csp.hxx
        src/constraints/gecode/handlers/lifted_action_csp.cxx
        src/constraints/gecode/handlers/lifted_action_csp.hxx
        src/constraints/gecode/handlers/lifted_effect_csp.cxx
        src/constraints/gecode/handlers/lifted_effect_csp.hxx
        src/constraints/gecode/handlers/lifted_effect_unreached.cxx
        src/constraints/gecode/handlers/lifted_effect_unreached.hxx
        src/constraints/gecode/translators/component_translator.cxx
        src/constraints/gecode/translators/component_translator.hxx
        src/constraints/gecode/utils/element_constraint.cxx
        src/constraints/gecode/utils/element_constraint.hxx
        src/constraints/gecode/utils/extensional_constraint.cxx
        src/constraints/gecode/utils/extensional_constraint.hxx
        src/constraints/gecode/utils/nested_fluent_iterator.cxx
        src/constraints/gecode/utils/nested_fluent_iterator.hxx
        src/constraints/gecode/utils/novelty_constraints.cxx
        src/constraints/gecode/utils/novelty_constraints.hxx
        src/constraints/gecode/utils/term_list_iterator.cxx
        src/constraints/gecode/utils/term_list_iterator.hxx
        src/constraints/gecode/utils/value_selection.cxx
        src/constraints/gecode/utils/value_selection.hxx
        src/constraints/gecode/csp_translator.cxx
        src/constraints/gecode/csp_translator.hxx
        src/constraints/gecode/extensions.cxx
        src/constraints/gecode/extensions.hxx
        src/constraints/gecode/gecode_csp.cxx
        src/constraints/gecode/gecode_csp.hxx
        src/constraints/gecode/helper.cxx
        src/constraints/gecode/helper.hxx
        src/constraints/gecode/lifted_plan_extractor.cxx
        src/constraints/gecode/lifted_plan_extractor.hxx
        src/constraints/gecode/supports.cxx
        src/constraints/gecode/supports.hxx
        src/constraints/filtering.hxx
        src/constraints/registry.cxx
        src/constraints/registry.hxx
        src/fstrips/language.cxx
        src/fstrips/language.hxx
        src/fstrips/language_info.cxx
        src/fstrips/language_info.hxx
        src/fstrips/loader.cxx
        src/fstrips/loader.hxx
        src/fstrips/operations.cxx
        src/fstrips/operations.hxx
        src/heuristics/novelty/features.cxx
        src/heuristics/novelty/features.hxx
        src/heuristics/relaxed_plan/gecode_crpg.cxx
        src/heuristics/relaxed_plan/gecode_crpg.hxx
        src/heuristics/relaxed_plan/relaxed_plan.cxx
        src/heuristics/relaxed_plan/relaxed_plan.hxx
        src/heuristics/relaxed_plan/relaxed_plan_extractor.hxx
        src/heuristics/relaxed_plan/rpg_data.cxx
        src/heuristics/relaxed_plan/rpg_data.hxx
        src/heuristics/relaxed_plan/rpg_index.cxx
        src/heuristics/relaxed_plan/rpg_index.hxx
        src/heuristics/relaxed_plan/smart_rpg.cxx
        src/heuristics/relaxed_plan/smart_rpg.hxx
        src/heuristics/null_heuristic.hxx
        src/heuristics/unsat_goal_atoms.cxx
        src/heuristics/unsat_goal_atoms.hxx
        src/languages/fstrips/operations/axioms.cxx
        src/languages/fstrips/operations/axioms.hxx
        src/languages/fstrips/operations/basic.cxx
        src/languages/fstrips/operations/basic.hxx
        src/languages/fstrips/operations/binding.cxx
        src/languages/fstrips/operations/binding.hxx
        src/languages/fstrips/operations/conjunction.cxx
        src/languages/fstrips/operations/conjunction.hxx
        src/languages/fstrips/operations/interpretation.cxx
        src/languages/fstrips/operations/interpretation.hxx
        src/languages/fstrips/axioms.cxx
        src/languages/fstrips/axioms.hxx
        src/languages/fstrips/base.cxx
        src/languages/fstrips/base.hxx
        src/languages/fstrips/builtin.cxx
        src/languages/fstrips/builtin.hxx
        src/languages/fstrips/effects.cxx
        src/languages/fstrips/effects.hxx
        src/languages/fstrips/factory.cxx
        src/languages/fstrips/factory.hxx
        src/languages/fstrips/formulae.cxx
        src/languages/fstrips/formulae.hxx
        src/languages/fstrips/language.hxx
        src/languages/fstrips/language_fwd.hxx
        src/languages/fstrips/loader.cxx
        src/languages/fstrips/loader.hxx
        src/languages/fstrips/operations.hxx
        src/languages/fstrips/scopes.cxx
        src/languages/fstrips/scopes.hxx
        src/languages/fstrips/terms.cxx
        src/languages/fstrips/terms.hxx
        src/lapkt/nodes/blind_node.hxx
        src/lib/rapidjson/error/en.h
        src/lib/rapidjson/error/error.h
        src/lib/rapidjson/internal/biginteger.h
        src/lib/rapidjson/internal/diyfp.h
        src/lib/rapidjson/internal/dtoa.h
        src/lib/rapidjson/internal/ieee754.h
        src/lib/rapidjson/internal/itoa.h
        src/lib/rapidjson/internal/meta.h
        src/lib/rapidjson/internal/pow10.h
        src/lib/rapidjson/internal/stack.h
        src/lib/rapidjson/internal/strfunc.h
        src/lib/rapidjson/internal/strtod.h
        src/lib/rapidjson/msinttypes/inttypes.h
        src/lib/rapidjson/msinttypes/stdint.h
        src/lib/rapidjson/allocators.h
        src/lib/rapidjson/document.h
        src/lib/rapidjson/encodedstream.h
        src/lib/rapidjson/encodings.h
        src/lib/rapidjson/filereadstream.h
        src/lib/rapidjson/filewritestream.h
        src/lib/rapidjson/memorybuffer.h
        src/lib/rapidjson/memorystream.h
        src/lib/rapidjson/pointer.h
        src/lib/rapidjson/prettywriter.h
        src/lib/rapidjson/rapidjson.h
        src/lib/rapidjson/reader.h
        src/lib/rapidjson/stringbuffer.h
        src/lib/rapidjson/writer.h
        src/models/ground_state_model.cxx
        src/models/ground_state_model.hxx
        src/models/lifted_state_model.cxx
        src/models/lifted_state_model.hxx
        src/models/simple_state_model.cxx
        src/models/simple_state_model.hxx
        src/search/algorithms/ehc.hxx
        src/search/algorithms/ehc_gbfs.hxx
        src/search/algorithms/iterated_width.hxx
        src/search/drivers/sbfws/features/features.cxx
        src/search/drivers/sbfws/features/features.hxx
        src/search/drivers/sbfws/__extra.hxx
        src/search/drivers/sbfws/base.cxx
        src/search/drivers/sbfws/base.hxx
        src/search/drivers/sbfws/config.cxx
        src/search/drivers/sbfws/config.hxx
        src/search/drivers/sbfws/idw_run.hxx
        src/search/drivers/sbfws/iw_run.cxx
        src/search/drivers/sbfws/iw_run.hxx
        src/search/drivers/sbfws/relevant_atomset.hxx
        src/search/drivers/sbfws/relevant_atoms.hxx
        src/search/drivers/sbfws/relevant_atoms.cxx
        src/search/drivers/sbfws/sbfws.cxx
        src/search/drivers/sbfws/sbfws.hxx
        src/search/drivers/sbfws/stats.cxx
        src/search/drivers/sbfws/stats.hxx
        src/search/drivers/breadth_first_search.cxx
        src/search/drivers/breadth_first_search.hxx
        src/search/drivers/fully_lifted_driver.cxx
        src/search/drivers/fully_lifted_driver.hxx
        src/search/drivers/iterated_width.cxx
        src/search/drivers/iterated_width.hxx
        src/search/drivers/registry.cxx
        src/search/drivers/registry.hxx
        src/search/drivers/setups.cxx
        src/search/drivers/setups.hxx
        src/search/drivers/smart_effect_driver.cxx
        src/search/drivers/smart_effect_driver.hxx
        src/search/drivers/smart_lifted_driver.cxx
        src/search/drivers/smart_lifted_driver.hxx
        src/search/drivers/validation.cxx
        src/search/drivers/validation.hxx
        src/search/nodes/bfws_node.hxx
        src/search/nodes/heuristic_search_node.hxx
        src/search/novelty/fs_novelty.cxx
        src/search/novelty/fs_novelty.hxx
        src/search/events.hxx
        src/search/options.cxx
        src/search/options.hxx
        src/search/runner.cxx
        src/search/runner.hxx
        src/search/stats.hxx
        src/search/utils.hxx
        src/states/state.cxx
        src/states/state.hxx
        src/utils/printers/actions.cxx
        src/utils/printers/actions.hxx
        src/utils/printers/binding.cxx
        src/utils/printers/binding.hxx
        src/utils/printers/gecode.cxx
        src/utils/printers/gecode.hxx
        src/utils/printers/helper.cxx
        src/utils/printers/helper.hxx
        src/utils/printers/language.cxx
        src/utils/printers/language.hxx
        src/utils/printers/printers.cxx
        src/utils/printers/printers.hxx
        src/utils/printers/registry.cxx
        src/utils/printers/registry.hxx
        src/utils/printers/vector.hxx
        src/utils/atom_index.cxx
        src/utils/atom_index.hxx
        src/utils/binding.cxx
        src/utils/binding.hxx
        src/utils/binding_iterator.cxx
        src/utils/binding_iterator.hxx
        src/utils/bitsets.hxx
        src/utils/cartesian_iterator.cxx
        src/utils/cartesian_iterator.hxx
        src/utils/component_factory.hxx
        src/utils/config.cxx
        src/utils/config.hxx
        src/utils/dispatcher.hxx
        src/utils/external.hxx
        src/utils/index.hxx
        src/utils/lexical_cast.hxx
        src/utils/loader.cxx
        src/utils/loader.hxx
        src/utils/projections.cxx
        src/utils/projections.hxx
        src/utils/serialize_tuple.hxx
        src/utils/serializer.cxx
        src/utils/serializer.hxx
        src/utils/static.cxx
        src/utils/static.hxx
        src/utils/support.cxx
        src/utils/support.hxx
        src/utils/system.cxx
        src/utils/system.hxx
        src/utils/tuple_hash.hxx
        src/utils/utils.hxx
        src/utils/visitor.hxx
        src/atom.cxx
        src/atom.hxx
        src/base.cxx
        src/base.hxx
        src/fs_types.hxx
        src/problem.cxx
        src/problem.hxx
        src/problem_info.cxx
        src/problem_info.hxx
        src/relaxed_state.cxx
        src/relaxed_state.hxx
        src/state.cxx
        src/state.hxx
        src/validator.cxx
        src/validator.hxx)

#add_executable(fs_private ${SOURCE_FILES})

add_library(fs SHARED ${SOURCE_FILES})

set(FS_SRC ./src)

#MESSAGE(WARNING  "Your LAPKT directory is $ENV{LAPKT}/include." )
#MESSAGE(WARNING "Your Unix home directory is $ENV{HOME}." )

include_directories($ENV{LAPKT}/include)

include_directories($ENV{HOME}/local/include)  # Gecode, etc.

include_directories(${FS_SRC})

